--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,8 +2,8 @@
 ---
 
 // Breakpoints
-$large-breakpoint: 64em !default;
-$medium-breakpoint: 42em !default;
+$large-breakpoint: 90em !default;
+$medium-breakpoint: 60em !default;
 
 // Headers
 $header-heading-color: #fff !default;
@@ -13,7 +13,7 @@ $header-bg-color-secondary: #e67e22;
 // Text
 $section-headings-color: #D35400;
 $body-text-color: #606c71 !default;
-$body-link-color: #1e6bb8 !default;
+$body-link-color: #ffffff !default;
 $blockquote-text-color: #819198 !default;
 
 // Code
