--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,3 +7,8 @@ $medium-breakpoint: 100em !default;
 
 
 @import "{{ site.theme }}";
+
+@media screen and (min-width: 100em)
+.main-content {
+    max-width: 100rem;
+}
