--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,3 +15,12 @@ $medium-breakpoint: 100em !default;
 .page-header {
     padding: 1rem 1rem;
 }
+
+.page-footer {
+    visibility: hidden;
+}
+
+.btn {
+    background-color: #159957;
+    background-image: linear-gradient(120deg, #155799, #159957);
+}
