--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -20,7 +20,7 @@ $medium-breakpoint: 100em !default;
     visibility: hidden;
 }
 
-.btn {
+.btn2 {
     background-color: #159957;
     background-image: linear-gradient(120deg, #155799, #159957);
 }
