--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,9 +28,9 @@
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
 
-        <a href="ecossaise.md" class="btn">♔ Ecossaise</a>
-        <a href="" class="btn">???</a>
-        <a href="scandinavecc6.md" class="btn">♚ Scandinave Cc6</a>
+        <a href="pages/ecossaise.md" class="btn">♔ Ecossaise</a>
+        <a href="pages/" class="btn">???</a>
+        <a href="pages/scandinavecc6.md" class="btn">♚ Scandinave Cc6</a>
 
     </header>
 
