--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
 
-        <a href="ecossaise.md" class="btn">♔ Ecossaise</a>
+        <a href="ecossaise" class="btn">♔ Ecossaise</a>
         <a href="pages/" class="btn">???</a>
         <a href="pages/scandinavecc6.md" class="btn btn2">♚ Scandinave Cc6</a>
 
