--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
 
         <a href="ecossaise" class="btn">♔ Ecossaise</a>
         <a href="pages/" class="btn">???</a>
-        <a href="pages/scandinavecc6.md" class="btn btn2">♚ Scandinave Cc6</a>
+        <a href="pages/scandinavecc6" class="btn btn2">♚ Scandinave Cc6</a>
 
     </header>
 
