--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,8 +28,8 @@
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
 
         <a href="ecossaise" class="btn">♔ Ecossaise</a>
-        <a href="pages/" class="btn">???</a>
-        <a href="pages/scandinavecc6" class="btn btn2">♚ Scandinave Cc6</a>
+        <a href="" class="btn">???</a>
+        <a href="scandinavecc6" class="btn btn2">♚ Scandinave Cc6</a>
 
     </header>
 
